aside overflow repaired and added README with overview link

--- a/Cities/index-style.css
+++ b/Cities/index-style.css
@@ -70,7 +70,7 @@ a:hover {
 	background-color: #B40431;
 	float: left;
 	padding-left: 5px;
-	padding-bottom: 5000px;
+	padding-bottom: 865px;
 	margin-bottom: -5000px;
 	opacity: 0.9;
 
